# first-ai-sprint

./: carpool.sqlite  conftest.py  pyproject.toml  setup.py  test.db  test_setup.py
app/: db.py  main.py
app/models/: user.py
app/routers/: users.py
app/schemas/: user.py
tests/: conftest.py  test_cli.py  test_db.py  test_git_stats.py  test_loc_counter.py  test_users.py
tools/repo_introspect/: cli.py  git_stats.py  loc_counter.py
