[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carpooling-app"
version = "0.1.0"
authors = [
  {name = "AI Team", email = "ai-team@example.com"}
]
dependencies = [
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.0.0",
  "pytest>=7.0.0",
  "httpx>=0.24.0"
]

[project.optional-dependencies]
development = [
  "ruff>=0.1.0",
  "mypy>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/example/carpooling-app"
Repository = "https://github.com/example/carpooling-app"

[tool.setuptools.packages.find]
where = "."
include = ["*"]

[tool.ruff]
line-length = 88

[tool.mypy]
python-version = "3.11"
